--- a/Discover/style.css
+++ b/Discover/style.css
@@ -1,26 +1,34 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  /*
-  background-image: url(./assets/bg-mobile.jpg);
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: cover;
-  */
-
-  /* background: color image repeat position/size */
-
   background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+}
+
+body * {
+  font-family: "Inter", sans-serif;
+  color: white;
 }
 
 #container {
   width: 360px;
-  border: 1px solid red;
-  margin: auto;
+  margin: 56px auto 0px;
 }
 
 #profile {
   text-align: center;
+  padding: 24px;
 }
 
 #profile img {
   width: 112px;
+}
+
+profile p {
+  font-weight: 500;
+  line-height: 24px;
+  margin-top: 8px;
 }
