--- a/Discover/style.css
+++ b/Discover/style.css
@@ -32,3 +32,19 @@ profile p {
   line-height: 24px;
   margin-top: 8px;
 }
+
+/* links */
+
+ul {
+  list-style: none;
+}
+
+ul li a {
+  border: 1px solid red;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 16px 24px;
+}
