--- a/Discover/style.css
+++ b/Discover/style.css
@@ -37,14 +37,34 @@ profile p {
 
 ul {
   list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 ul li a {
-  border: 1px solid red;
-
   display: flex;
   align-items: center;
   justify-content: center;
 
   padding: 16px 24px;
+
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  border-radius: 8px;
+
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+
+  text-decoration: none;
+  font-weight: 500;
+
+  transition: background 0.2s;
+}
+
+/* pseudo-selector */
+ul li a:hover {
+  background: rgba(255, 255, 255, 0.05);
+  border: 1.5px solid white;
 }
