--- a/Discover/style.css
+++ b/Discover/style.css
@@ -4,13 +4,21 @@
   box-sizing: border-box;
 }
 
+:root {
+  --text-color: white;
+}
+
+.light {
+  --text-color: black;
+}
+
 body {
   background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
 }
 
 body * {
   font-family: "Inter", sans-serif;
-  color: white;
+  color: var(--text-color);
 }
 
 #container {
@@ -69,7 +77,7 @@ ul li a {
 /* pseudo-selector */
 ul li a:hover {
   background: rgba(255, 255, 255, 0.05);
-  border: 1.5px solid white;
+  border: 1.5px solid var(--text-color);
 }
 
 /* social links */
