--- a/Discover/style.css
+++ b/Discover/style.css
@@ -57,7 +57,10 @@ body * {
 
 /* switch */
 #switch {
-  border: 1px solid red;
+  position: relative;
+  width: 64px;
+
+  margin: 4px auto;
 }
 
 #switch button {
@@ -66,6 +69,17 @@ body * {
   background: white var(--switch-bg-url) no-repeat center;
   border: 0;
   border-radius: 50%;
+
+  position: absolute;
+  top: 50%;
+  left: 0;
+  z-index: 1;
+  transform: translateY(-50%);
+}
+
+.light #switch button {
+  right: 0;
+  left: initial;
 }
 
 #switch span {
